manifests/test/test-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: test-http-server-deployment-1
  labels:
    app: test-http-server-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-http-server-1
  template:
    metadata:
      labels:
        app: test-http-server-1
    spec:
      containers:
        - name: server-container-1
          image: byjg/static-httpserver
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-for-test-server-1
spec:
  type: ClusterIP # ClusterIP is the default if type is ommited
  selector:
    app: test-http-server-1
  ports:
    - name: http
      protocol: TCP
      port: 8080 # or use 80 for a permanent page
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: test-server-https-ingress-dns-ovh
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-ovh
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  tls:
    - hosts:
        - testdns.robotcocktail.ovh
      secretName: test-server-1-tls-ovh-robotcocktail-testdns
  rules:
    - host: testdns.robotcocktail.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-for-test-server-1
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: test-server-https-ingress-dns-http
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public
  #tls:
  #  - hosts:
  #      - a.robotcocktail.ovh
  #    secretName: test-server-1-tls-ovh-robotcocktail-a
  rules:
    - host: a.robotcocktail.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-for-test-server-1
                port:
                  name: http
